# rus-connect

./: .gitignore  .wslconfig.template  CLICKHOUSE_DATA_ANALYSIS.md  CONFIDENCE_FIX.md  Dockerfile.autotrade  FINAL_ML_SYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  MEMORY_LEAK_FIX.md  ML_LEARNING_FIX_COMPLETE.md  ML_METRICS_FIX.md  ML_RELIABILITY_FIXES.md  ML_SYSTEM_IMPLEMENTATION_SUMMARY.md  README-TRADING.md  README.md  TASK_COMPLETION_CONFIRMATION.md  api bybit 2025.txt  backtest_detailed_report.md  backtest_report.json  backtest_results.json  backtest_summary.txt  docker-compose.yml  env.example  final_validation.go  go.mod  go.sum  test_calibration.go  tmp_calibration.json  tmp_index_html.html  tmp_metrics.json  update_actual_directions.sql
analytics-engine/: .dockerignore  Dockerfile  advanced_features.go  advanced_ml_engine.go  direction_analyzer.go  enhanced_features.go  ensemble_trading_ai.go  explainable_ai.go  feature_engine.go  feature_normalizer.go  go.mod  go.sum  health_endpoints_test.go  historical_loader.go  indicators_test.go  lstm_trading_ai.go  main.go  ml_detector.go  ml_integration.go  ml_performance_monitor.go  ml_trading_model.go  model_analysis.go  model_performance_monitor.go  model_persistence.go  online_learner.go  online_learning.go  order_book_engine.go  retrain_endpoint_test.go  self_learning_engine.go  simple_feature_engine.go  simple_neural_network.go  technical_indicators.go  types.go  volume_anomaly.go
api-gateway/: .dockerignore  Dockerfile  go.mod  go.sum  (+3 more)
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/: main.rs
(+76 files in other folders)
