[package]
name = "rus-connect-scalper"
version = "0.1.0"
description = "Rus-Connect Scalper - Desktop Trading Application"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57.0"

[build-dependencies]
tauri-build = "1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["path-all", "shell-all", "window-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
